<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="eLoadSta3State" Id="{746dba43-beb9-436f-846d-61346561d7bc}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eLoadSta3State :
( 
	eUnknown :=401,
    eInit,
	eHoming,
	eReady,
	eDwell,
	eWaitForLoadComplete,
	eProcessing,
	eDepart,
	eStopActive,
    eError
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>