<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.3">
  <POU Name="Load3Station" Id="{4a5e7ad5-a119-43a8-bc76-42db68c9d77f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK PUBLIC Load3Station
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	xTrigger :BOOL := FALSE; // triggers processing
	State : eLoadSta3State := eLoadSta3State.eUnknown;
	NextState : eLoadSta3State := eLoadSta3State.eUnknown;
	bFirst : BOOL := TRUE;
	VUT : BYTE; //VehicleID Under Station
	DwellTimer : TON;
	LoadingComplete : BOOL := FALSE;
	CycleNumb: INT := 0;
	RowNumber :INT:=0;
	SeedNumber : INT:=5;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF (GVL_IO.MachineEStopped) THEN 
	State := eLoadSta3State.eUnknown;
	NextState := eLoadSta3State.eUnknown;
END_IF

CASE State OF
eLoadSta3State.eUnknown:
	NextState := eLoadSta3State.eReady;

eLoadSta3State.eInit:

eLoadSta3State.eHoming:

eLoadSta3State.eReady:

IF (xTrigger) THEN
		NextState := eLoadSta3State.eWaitForLoadComplete;
		
		DwellTimer(IN:=FALSE);	
	END_IF

eLoadSta3State.eDwell:

eLoadSta3State.eWaitForLoadComplete:
	 IF (LoadingComplete) THEN
		NextState := eLoadSta3State.eDepart;
		UpdatePartData();
		LoadingComplete := FALSE;
		DwellTimer(IN:=FALSE);
	END_IF


eLoadSta3State.eProcessing:

eLoadSta3State.eDepart:
	Stations.fbRoutePlanner.M_NotifyVehStaCmpl(StationIndex:= MM_CONST.LOAD_3_STA, VehicleID := VUT);
	xTrigger := FALSE;
    IF (Stations.fbCycleControl.StopRequested) THEN
		NextState := eLoadSta3State.eStopActive;
	ELSE	
		NextState := eLoadSta3State.eReady;	
	END_IF

eLoadSta3State.eStopActive:
	IF (NOT Stations.fbCycleControl.StopRequested) THEN
		NextState := eLoadSta3State.eReady;
	END_IF
	
eLoadSta3State.eError:

END_CASE

IF (State <> NextState) THEN
	bFirst := TRUE;
ELSE
	bFirst := FALSE;
END_IF

State := NextState;
Status.StationsState[MM_CONST.LOAD_3_STA_HMI_STATE] := State;]]></ST>
    </Implementation>
    <Method Name="ClearVehicleTrigger" Id="{481820c8-5859-40c1-9315-3ddae5c64382}">
      <Declaration><![CDATA[METHOD PUBLIC ClearVehicleTrigger : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[xTrigger := FALSE;]]></ST>
      </Implementation>
    </Method>
    <Property Name="LoadComplete" Id="{4b308fe3-127b-4bed-88a4-377988e22c6d}">
      <Declaration><![CDATA[PROPERTY PUBLIC LoadComplete : BOOL]]></Declaration>
      <Set Name="Set" Id="{3954f32e-8f2e-43f7-a525-c4d5163288c9}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[LoadingComplete := LoadComplete;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Method Name="ResetState" Id="{e931cf68-a211-48b1-9fe1-9d8fc26f62ef}">
      <Declaration><![CDATA[METHOD PUBLIC ResetState : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[	State := eLoadSta3State.eUnknown;
	NextState := eLoadSta3State.eUnknown;]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetRowNumber" Id="{eb7a373d-2701-42dd-a51b-669104ecc2cb}">
      <Declaration><![CDATA[METHOD PUBLIC SetRowNumber : BOOL
VAR_INPUT
	RowLocationNumber : INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[RowNumber := RowLocationNumber;]]></ST>
      </Implementation>
    </Method>
    <Property Name="Trigger" Id="{79a6d11b-9300-449f-81ad-dcfbb183056d}">
      <Declaration><![CDATA[PROPERTY PUBLIC Trigger : BOOL]]></Declaration>
      <Set Name="Set" Id="{48e7e57f-2e67-49a2-a7ce-40c0816f4ee4}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[xTrigger := Trigger;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Method Name="UpdatePartData" Id="{83b8a77f-498f-4bef-bf21-10807c4c852d}">
      <Declaration><![CDATA[METHOD PUBLIC UpdatePartData : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[memset(ADR(PartsData.Status[VUT]),0,SIZEOF(PartDataType));
PartsData.Status[VUT].LoadTime := SYSTEMTIME_TO_STRING(Logging.fbCurrTime.systemTime);
//PartsData.Status[VUT].CavityNumber := 9 + (CycleNumb MOD 4);
PartsData.Status[VUT].CavityNumber := RowNumber + SeedNumber;
CycleNumb := CycleNumb+1; // Use this till Yushin Robot sends out this information with Bit Location ID
PartsData.Status[VUT].OverallStatus := ePartStatus.eLoaded; // At least that is the assumption. We may want to check on how to turn off cavities later, but this will be caught by vision.
PartsData.Status[VUT].BarrelSize := LotsData.Lot.BarrelSize; // we are copying this data in case we might in future want to have more than one lots running at the same time on the machine
PartsData.Status[VUT].PartNumber := LotsData.Lot.PartNumber; // we are copying this data in case we might in future want to have more than one lots running at the same time on the machine
PartsData.Status[VUT].LotNumber := LotsData.Lot.LotNumber; // we are copying this data in case we might in future want to have more than one lots running at the same time on the machine]]></ST>
      </Implementation>
    </Method>
    <Property Name="VehicleUnderTest" Id="{3dd97944-f448-4c5a-b17d-b61059f40103}">
      <Declaration><![CDATA[PROPERTY PUBLIC VehicleUnderTest : BYTE]]></Declaration>
      <Get Name="Get" Id="{23050b32-c4b9-41c2-8d54-770554ef09bf}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[VehicleUnderTest := VUT;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{046fffc1-eee1-45b2-bb63-35bab2a08368}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[VUT := VehicleUnderTest;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <LineIds Name="Load3Station">
      <LineId Id="102" Count="2" />
      <LineId Id="101" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="162" Count="0" />
      <LineId Id="44" Count="3" />
      <LineId Id="36" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="78" Count="2" />
      <LineId Id="158" Count="0" />
      <LineId Id="81" Count="4" />
      <LineId Id="74" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="105" Count="0" />
      <LineId Id="178" Count="0" />
      <LineId Id="106" Count="0" />
      <LineId Id="183" Count="3" />
      <LineId Id="107" Count="1" />
      <LineId Id="179" Count="1" />
      <LineId Id="182" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="13" Count="7" />
      <LineId Id="128" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="Load3Station.ClearVehicleTrigger">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="Load3Station.LoadComplete.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="Load3Station.ResetState">
      <LineId Id="6" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="Load3Station.SetRowNumber">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="Load3Station.Trigger.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="Load3Station.UpdatePartData">
      <LineId Id="13" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="10" Count="1" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="Load3Station.VehicleUnderTest.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="Load3Station.VehicleUnderTest.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>